# birbia-station-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cookies.txt  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: birbia-test-bot.yml  birbia_docker_deploy.yml
birbia_dc_bot/: main.py
birbia_dc_bot/cogs/: music.py
birbia_station/: main.py
birbia_station/cogs/: help.py  music.py  utility.py  xcog.py
birbia_station/constants/: help_commands.py
birbia_station/core/: logger.py
birbia_station/core/doujin/: doujin.py  scraper.py
birbia_station/core/music/: birbia_queue.py
birbia_station/core/music/audiosearchers/: audiosearcher.py  base.py  youtube.py
birbia_station/core/utils/: poetry_utils.py  yt_urls.py
birbia_station/tests/: audio_searcher_test.py  dd_test.py  poetry_test.py  url_corrector_test.py
birbia_station/utils/: poetry_utils.py  scraper_bypass.py  yt_audio_search.py  yt_urls.py
cogs/: help.py  music.py
src/: main.py
src/api/franks/: FranksAPI.py  FranksAPIResponse.py  FranksChatInstance.py
src/api/instagram/: InstagramAPI.py
src/cogs/: franksai.py  help.py  music.py  utility.py  xcog.py
src/constants/: version.py
src/core/: cache.py  exceptions.py  language.py  logger.py
src/core/doujin/: doujin.py  scraper.py
src/core/music/: birbia_queue.py
src/core/music/audiosearchers/: audiosearcher.py  base.py  instagram.py  tiktok.py  youtube.py
src/core/utils/: poetry_utils.py
src/lang/: en.json  es.json
tests/: test_audio_searcher.py  test_birbia_cache.py  test_dd.py  test_language.py  test_url_corrector.py
