[tool.poetry]
name = "birbia-station-bot"
version = "1.2.10"
description = "Birbia's Radio discord bot."
authors = ["SkinnyDevi <xthesmartdartx@gmail.com>"]
maintainers = ["SkinnyDevi <xthesmartdartx@gmail.com>"]
readme = "README.md"
packages = [{include = "birbia_station"}]
repository = "https://github.com/SkinnyDevi/birbia-station-bot"

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2023.1.6"
async-timeout = ">=4.0.0a3,<5.0"
PyNaCl = "^1.4.0"
websockets = "^9.1"
aiohttp = "^3.8.4"
"discord.py" = "^2.2.2"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
MarkupSafe = "2.0.1"
beautifulsoup4 = "^4.11.2"
requests = "^2.27.1"
undetected-chromedriver = "^3.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
bot = "birbia_station.main:start_bot"
test = "birbia_station.tests.poetry_test:start"
testing = "birbia_station.testing:testing"
docker = "birbia_station.utils.poetry_utils:docker_build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
